--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ md-card {
     opacity: 0;
 }
 
+.animate-enter.animate-enter-active {
+    opacity: 1;
+}
+
 .round-face {
     border-radius: 30px;
     border: 1px solid #ddd;
@@ -39,13 +43,20 @@ md-card {
 
 #mainFab {
     position: fixed;
-    right: 42px;
+    right: 2%;
     bottom: 24px;
     background-color: #db4437;
 }
 
 #mainFab svg {
     fill: white;
+}
+
+#fab-popup {
+    height: 260px;
+    position: fixed;
+    right: 2%;
+    bottom: 90px;
 }
 
 #content {
