small changes, fixing version dependencies, solving encoding issuex

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ footer {
     padding: 16px;
 }
 
-md-content.md-blue-theme {
+md-content#main.md-blue-theme {
     background-color: #ececec;
 }
 
